fix wrong padding and size for mobile devices

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -22,3 +22,9 @@
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+@media (max-width: 400px) {
+    .contact .contactTitle {
+        font-size: 60px;
+    }
+}
