--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -121,3 +121,32 @@
         font-size: 25px;
     }
 }
+
+@media (max-width: 500px) {
+    .containerCard {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
+    .buttonCard {
+        width: 250px;
+        height: 160px;
+    }
+
+    .buttonCard:hover .secondImg {
+        height: 160px;
+    }
+
+    .buttonCard .secondImg {
+        width: 250px;
+    }
+
+    .buttonCard .buttonCardTextPlus {
+        margin-bottom: 8%;
+        font-size: 18px;
+    }
+
+    .buttonCard .buttonCardText {
+        font-size: 22px;
+    }
+}
